# branding

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: publish.yml
content/: _template.adoc
content/drafts/: exemple-esn.adoc
content/ready/: esn-01.adoc  esn-02.adoc  esn-03.adoc  formation-01.adoc  formation-02.adoc  general-01.adoc  general-02.adoc  general-03.adoc  livre-01.adoc  livre-02.adoc  livre-03.adoc
src/: cli.py  parser.py
src/generator/: claude.py
src/publishers/: bluesky.py  x.py
