[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "branding-pipeline"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
publish = [
    "tweepy>=4.14",
    "atproto>=0.0.54",
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.40",
]
dev = [
    "branding-pipeline[publish]",
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
branding = "src.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
